Fix interface lookup on Win32

https://bugzilla.gnome.org/show_bug.cgi?id=762455